ship control and terra forming

--- a/game1.html
+++ b/game1.html
@@ -5,7 +5,7 @@
       html, body { margin: 0; padding: 0; overflow: hidden; }
     </style>
   </head>
-  <body onmousemove="moveMouse(event)">
+  <body> 
     <script src="three.min.js"></script>
     <script src="stats.min.js"></script>
     <script src="game1.js"></script>
